--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <h2>Bem Vindos Potterheads!</h2>
       </div>
       <div class="buttons-menu">
-      <a href='next.html'>
+      <a href="next.html">
         <button type="button" class="btn">INICIAR</button>
       </a>
       </div>
