--- a/src/next.html
+++ b/src/next.html
@@ -37,7 +37,7 @@
           <option value="female">Female</option>
           <option value="male">Male</option>
         </select>
-        <input type="text" id='searchInput'placeholder="Search Character" class="menu-items">
+        <input type="text" id="searchInput" placeholder="Search Character" class="menu-items"> 
         <button id="clear-button">Limpar</button>
         </nav>
   </header>
